--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.0.4.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.0.4.RELEASE'
+    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.0.9.RELEASE'
 
 }
