--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,10 @@ dependencies {
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.0.4.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.0.4.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.0.4.RELEASE'
+
+    compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity4')
     compile group: 'org.modelmapper', name: 'modelmapper', version: '1.1.1'
-    compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity4', version: '2.1.2.RELEASE'
+
 
 }
