--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database connection with the given database name
-spring.datasource.url = jdbc:mysql://localhost:3306/javablog
+spring.datasource.url = jdbc:mysql://localhost:3306/betting4life
 
 # Username and password
 spring.datasource.username = root
