--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.url = jdbc:mysql://localhost:3306/betting4life
 spring.datasource.username = root
 spring.datasource.password = Aquakineza97
 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
 # Show or not log for each sql query
 spring.jpa.show-sql = true
 
