--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Database connection with the given database name
-spring.datasource.url = jdbc:mysql://localhost:3306/betting4life
+spring.datasource.url = jdbc:mysql://localhost/betting4life
 
 # Username and password
-spring.datasource.username = root
-spring.datasource.password = Aquakineza97
+spring.datasource.username = username
+spring.datasource.password = password
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
