--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,14 @@
-# Database connection with the given database name
-spring.datasource.url = jdbc:mysql://localhost/betting4life
-
-# Username and password
-spring.datasource.username = username
-spring.datasource.password = password
-
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+database.driver=com.mysql.jdbc.Driver
+database.url=jdbc:mysql://localhost:3306/betting4life
+database.username=root
+database.password=Aquakineza97
 
 
-# Show or not log for each sql query
-spring.jpa.show-sql = true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# Hibernate ddl auto (create, create-drop, update): with "update" the database
-# schema will be automatically updated accordingly to java entities found in
-# the project
-# Using "create" will delete and recreate the tables every time the project is started
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
 
-# Naming strategy
-spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
-
-# Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-#Turn off Thymeleaf cache
-spring.thymeleaf.cache = false
+spring.jpa.properties.hibernate.type=trace 
