--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: java
-jdk: oraclejdk8
-before_script:
- - chmod +x gradlew
-script:
-- ./gradlew build --stacktrace
+# use Java 8
+jdk:
+- oraclejdk8
+
+# see https://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure
+sudo: false
+
+# cache the build tool's caches
+cache:
+  directories:
+  - $HOME/.m2
+  - $HOME/.gradle
