--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: "jacoco"
 
 group = 'com.teamproject'
 version = '0.0.1-SNAPSHOT'
@@ -22,6 +23,7 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
 }
+
 
 
 dependencies {
@@ -39,3 +41,13 @@ dependencies {
 
 
 }
+
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+}
+
+check.dependsOn jacocoTestReport
