--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 database.driver=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/betting4life
-database.username=root
-database.password=Aquakineza97
+database.username=dev_user
+database.password=dev_user
 
 
 logging.level.org.hibernate.SQL=DEBUG
